--- a/PyCitySchools/main.ipynb
+++ b/PyCitySchools/main.ipynb
@@ -2155,7 +2155,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # Create a copy of the school summary since it has the \"Per Student Budget\" but without the formats\n",
+    "# Create a copy of the school summary since it has the \"Per Student Budget\" but without the formats\n",
     "school_spending_df = pd.DataFrame({\n",
     "    \"School Type\": school_types,\n",
     "    \"Total Students\": per_school_counts,\n",
